@@ -10,6 +10,8 @@ import com.topface.topface.requests.BannerRequest;
 import com.topface.topface.requests.DialogRequest;
 import com.topface.topface.ui.ChatActivity;
 import com.topface.topface.ui.adapters.DialogListAdapter;
+import com.topface.topface.ui.adapters.IListLoader;
+import com.topface.topface.ui.adapters.IListLoader.ItemType;
 import com.topface.topface.ui.p2r.PullToRefreshBase.OnRefreshListener;
 import com.topface.topface.ui.p2r.PullToRefreshListView;
 import com.topface.topface.ui.views.DoubleBigButton;
@@ -17,29 +19,28 @@ import com.topface.topface.utils.AvatarManager;
 import com.topface.topface.utils.CacheProfile;
 import com.topface.topface.utils.Debug;
 import android.content.Intent;
-import android.graphics.Color;
-import android.graphics.Typeface;
 import android.graphics.drawable.BitmapDrawable;
 import android.os.Bundle;
-import android.view.Gravity;
+import android.os.Handler;
+import android.os.Message;
 import android.view.View;
 import android.widget.AdapterView;
 import android.widget.AdapterView.OnItemClickListener;
 import android.widget.ImageView;
 import android.widget.ProgressBar;
-import android.widget.TextView;
 import android.widget.Toast;
 
 public class DialogActivity extends FrameActivity {
     // Data
     private boolean mNewUpdating;
-    private TextView mFooterView;
+//    private TextView mFooterView;
     private PullToRefreshListView mListView;
     private DialogListAdapter mListAdapter;
     private AvatarManager<Dialog> mAvatarManager;
     private DoubleBigButton mDoubleButton;
     private ProgressBar mProgressBar;
     private ImageView mBannerView;
+    private boolean mIsUpdating = false;
     // Constants
     private static final int LIMIT = 40;
     //---------------------------------------------------------------------------
@@ -89,37 +90,57 @@ public class DialogActivity extends FrameActivity {
         mListView.getRefreshableView().setOnItemClickListener(new OnItemClickListener() {
             @Override
             public void onItemClick(AdapterView<?> parent,View view,int position,long id) {
-                ImageView iv = (ImageView)view.findViewById(R.id.ivAvatar);
-                Data.userAvatar = ((BitmapDrawable)iv.getDrawable()).getBitmap();
-                try {
-                    Intent intent = new Intent(DialogActivity.this.getApplicationContext(), ChatActivity.class);
-                    intent.putExtra(ChatActivity.INTENT_USER_ID, Data.dialogList.get(position).uid);
-                    intent.putExtra(ChatActivity.INTENT_USER_NAME, Data.dialogList.get(position).first_name);
-                    startActivity(intent);
-                } catch(Exception e) {
-                    Debug.log(DialogActivity.this, "start ChatActivity exception:" + e.toString());
-                }
+            	if (!mIsUpdating && Data.dialogList.get(position).isLoaderRetry()) {
+            		updateUI(new Runnable() {
+						public void run() {
+							removeLoaderListItem();
+							Data.dialogList.add(new Dialog(ItemType.LOADER));
+							mListAdapter.notifyDataSetChanged();
+						}
+					});
+            		
+            		updateDataHistory();
+            	} else {
+	                ImageView iv = (ImageView)view.findViewById(R.id.ivAvatar);
+	                Data.userAvatar = ((BitmapDrawable)iv.getDrawable()).getBitmap();
+	                try {
+	                    Intent intent = new Intent(DialogActivity.this.getApplicationContext(), ChatActivity.class);
+	                    intent.putExtra(ChatActivity.INTENT_USER_ID, Data.dialogList.get(position).uid);
+	                    intent.putExtra(ChatActivity.INTENT_USER_NAME, Data.dialogList.get(position).first_name);
+	                    startActivity(intent);
+	                } catch(Exception e) {
+	                    Debug.log(DialogActivity.this, "start ChatActivity exception:" + e.toString());
+	                }
+            	}
             }
         });
 
         // Footer
-        mFooterView = new TextView(getApplicationContext());
-        mFooterView.setOnClickListener(new View.OnClickListener() {
-            @Override
-            public void onClick(View v) {
-                updateDataHistory();
-            }
-        });
-        mFooterView.setBackgroundResource(R.drawable.item_list_selector);
-        mFooterView.setText(getString(R.string.general_footer_previous));
-        mFooterView.setTextColor(Color.DKGRAY);
-        mFooterView.setGravity(Gravity.CENTER);
-        mFooterView.setTypeface(Typeface.DEFAULT_BOLD);
-        mFooterView.setVisibility(View.GONE);
-        mListView.getRefreshableView().addFooterView(mFooterView);
+//        mFooterView = new TextView(getApplicationContext());
+//        mFooterView.setOnClickListener(new View.OnClickListener() {
+//            @Override
+//            public void onClick(View v) {
+//                updateDataHistory();
+//            }
+//        });
+//        mFooterView.setBackgroundResource(R.drawable.item_list_selector);
+//        mFooterView.setText(getString(R.string.general_footer_previous));
+//        mFooterView.setTextColor(Color.DKGRAY);
+//        mFooterView.setGravity(Gravity.CENTER);
+//        mFooterView.setTypeface(Typeface.DEFAULT_BOLD);
+//        mFooterView.setVisibility(View.GONE);
+//        mListView.getRefreshableView().addFooterView(mFooterView);
 
         // Control creating
-        mAvatarManager = new AvatarManager<Dialog>(getApplicationContext(), Data.dialogList,null);
+        mAvatarManager = new AvatarManager<Dialog>(getApplicationContext(), Data.dialogList, new Handler() {
+        	@Override
+        	public void handleMessage(Message msg) {
+        		if (Data.dialogList.getLast().isLoader() && !mIsUpdating)
+        			updateDataHistory();
+        		
+        		super.handleMessage(msg);
+        	}
+        });
         mListAdapter = new DialogListAdapter(getApplicationContext(), mAvatarManager);
         mListView.setOnScrollListener(mAvatarManager);
         mListView.setAdapter(mListAdapter);
@@ -129,6 +150,7 @@ public class DialogActivity extends FrameActivity {
     }
     //---------------------------------------------------------------------------
     private void updateData(boolean isPushUpdating) {
+    	mIsUpdating = true;
         if (!isPushUpdating)
             mProgressBar.setVisibility(View.VISIBLE);
 
@@ -144,18 +166,24 @@ public class DialogActivity extends FrameActivity {
                 updateUI(new Runnable() {
                     @Override
                     public void run() {
-                        if (mNewUpdating)
-                            mFooterView.setVisibility(View.GONE);
-                        else
-                            mFooterView.setVisibility(View.VISIBLE);
+//                        if (mNewUpdating)
+//                            mFooterView.setVisibility(View.GONE);
+//                        else
+//                            mFooterView.setVisibility(View.VISIBLE);
+//
+//                        if (Data.dialogList.size() == 0 || Data.dialogList.size() < LIMIT / 2)
+//                            mFooterView.setVisibility(View.GONE);
 
-                        if (Data.dialogList.size() == 0 || Data.dialogList.size() < LIMIT / 2)
-                            mFooterView.setVisibility(View.GONE);
-
-                        mProgressBar.setVisibility(View.GONE);
+                    	if (!(Data.dialogList.size() == 0 || Data.dialogList.size() < LIMIT / 2)) {
+                     			Data.dialogList.add(new Dialog(IListLoader.ItemType.LOADER));
+                     	}
+                     	
+                    	
+                    	mProgressBar.setVisibility(View.GONE);
                         mListView.onRefreshComplete();
                         mListAdapter.notifyDataSetChanged();
                         mListView.setVisibility(View.VISIBLE);
+                        mIsUpdating = false;
                     }
                 });
             }
@@ -164,9 +192,11 @@ public class DialogActivity extends FrameActivity {
                 updateUI(new Runnable() {
                     @Override
                     public void run() {
-                        Toast.makeText(DialogActivity.this, getString(R.string.general_data_error), Toast.LENGTH_SHORT).show();
+                    	Toast.makeText(DialogActivity.this, getString(R.string.general_data_error), Toast.LENGTH_SHORT).show();
                         mProgressBar.setVisibility(View.GONE);
                         mListView.onRefreshComplete();
+                        mListView.setVisibility(View.VISIBLE);
+                        mIsUpdating = false;
                     }
                 });
             }
@@ -174,28 +204,37 @@ public class DialogActivity extends FrameActivity {
     }
     //---------------------------------------------------------------------------
     private void updateDataHistory() {
-        mProgressBar.setVisibility(View.VISIBLE);
+    	mIsUpdating = true;
+    	mNewUpdating = mDoubleButton.isRightButtonChecked();
 
         DialogRequest dialogRequest = new DialogRequest(getApplicationContext());
-        dialogRequest.limit = LIMIT;
-        dialogRequest.before = Data.dialogList.get(Data.dialogList.size() - 1).id;
+        dialogRequest.limit = LIMIT;        
+        if (!mNewUpdating) {
+        	if (Data.dialogList.getLast().isLoader() || Data.dialogList.getLast().isLoaderRetry()) {
+        		dialogRequest.before = Data.dialogList.get(Data.dialogList.size() - 2).id;
+        	} else {
+        		dialogRequest.before = Data.dialogList.get(Data.dialogList.size() - 1).id;
+        	}        	
+        }
         dialogRequest.callback(new ApiHandler() {
             @Override
-            public void success(ApiResponse response) {
-                final LinkedList<Dialog> dialogList = Dialog.parse(response);
-                if (dialogList.size() > 0)
-                    Data.dialogList.addAll(dialogList);
+            public void success(ApiResponse response) {            	
+                final LinkedList<Dialog> dialogList = Dialog.parse(response);                
 
                 updateUI(new Runnable() {
                     @Override
                     public void run() {
-                        if (dialogList.size() == 0 || dialogList.size() < LIMIT / 2)
-                            mFooterView.setVisibility(View.GONE);
-                        else
-                            mFooterView.setVisibility(View.VISIBLE);
+                    	removeLoaderListItem();
+                    	if (dialogList.size() > 0) {
+                            Data.dialogList.addAll(dialogList);
+                            if (!(Data.dialogList.size() == 0 || Data.dialogList.size() < (LIMIT/2)))
+                            	Data.dialogList.add(new Dialog(IListLoader.ItemType.LOADER));
+                        }
+                    	
                         mProgressBar.setVisibility(View.GONE);
                         mListView.onRefreshComplete();
                         mListAdapter.notifyDataSetChanged();
+                        mIsUpdating = false;
                     }
                 });
             }
@@ -204,9 +243,13 @@ public class DialogActivity extends FrameActivity {
                 updateUI(new Runnable() {
                     @Override
                     public void run() {
-                        Toast.makeText(DialogActivity.this, getString(R.string.general_data_error), Toast.LENGTH_SHORT).show();
-                        mFooterView.setVisibility(View.GONE);
+                    	mProgressBar.setVisibility(View.GONE);
+                        Toast.makeText(DialogActivity.this.getApplicationContext(), getString(R.string.general_data_error), Toast.LENGTH_SHORT).show();                        
+                        mIsUpdating = false;
+                    	removeLoaderListItem();
+                        Data.dialogList.add(new Dialog(IListLoader.ItemType.RETRY));
                         mListView.onRefreshComplete();
+                        mListAdapter.notifyDataSetChanged();
                     }
                 });
             }
@@ -244,4 +287,11 @@ public class DialogActivity extends FrameActivity {
         Data.userAvatar = null;
     }
     //---------------------------------------------------------------------------
+    private void removeLoaderListItem() {
+    	if (Data.dialogList.size() > 0 ) {
+	    	if (Data.dialogList.getLast().isLoader() || Data.dialogList.getLast().isLoaderRetry()) {
+	    		Data.dialogList.remove(Data.dialogList.size() - 1);
+	    	}
+    	}
+    }
 }
